2005-10-10  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Added "it" to ALL_LINGUAS.
	* po/it.po: Added Italian translation by
	Stefano Fabri <bluefuture@email.it>

2005-08-29  Jürg Billeter  <j@bitron.ch>

	* Makefile.am: dist intltool files
	* configure.ac: Bump version to 0.0.3

2005-08-28  Jürg Billeter  <j@bitron.ch>

	* src/nautilus-image-resizer.c: fix glade file path
	* src/Makefile.am: dist and install glade file
	* configure.ac: Bump version to 0.0.2